
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int config_t ;


 int assert (int ) ;
 int * entry_find (int const*,char const*,char const*) ;

bool config_has_key(const config_t *config, const char *section, const char *key)
{
    assert(config != ((void*)0));
    assert(section != ((void*)0));
    assert(key != ((void*)0));

    return (entry_find(config, section, key) != ((void*)0));
}
